// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SignUp > the component is Loading 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-ozvug0-MuiStack-root"
  >
    <svg
      class="css-13bjqh2"
      fill="none"
      height="38"
      viewBox="0 0 250 38"
      width="250"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M135.904 26.0125C132.789 23.1909 131.262 19.5717 131.262 15.1245C131.262 10.6773 132.85 7.02749 135.935 4.23647C139.02 1.44545 142.991 0.00393883 147.755 0.00393883C148.932 -0.0208734 150.109 0.0715888 151.268 0.279972C152.074 0.434727 152.87 0.639592 153.65 0.893382L155.941 1.8135V10.0025C148.152 5.98468 140.15 8.65302 140.425 15.2472C140.425 17.5475 141.066 19.2957 142.441 20.5839C143.765 21.8458 145.533 22.5295 147.358 22.4854C148.855 22.4854 150.016 22.1787 150.81 21.6573V12.7015H159.759V25.7978C158.629 27.0247 156.918 28.0981 154.658 28.9569C152.327 29.8426 149.851 30.2796 147.358 30.2451C142.817 30.2451 139 28.8342 135.904 26.0125Z"
        fill="white"
      />
      <path
        d="M163.009 0.5H171.943V17.6345C171.943 20.7415 173.84 22.1258 176.288 22.1258C178.736 22.1258 180.602 20.7415 180.602 17.6345V0.5H189.506V17.573C189.506 21.6336 188.282 24.7714 185.743 26.9555C183.203 29.1396 180.113 30.247 176.288 30.247C172.463 30.247 169.312 29.1704 166.803 26.9555C164.294 24.7406 163.009 21.6336 163.009 17.573V0.5Z"
        fill="white"
      />
      <path
        d="M222.003 29.7471H211.497L203.734 19.3193H202.501V29.7471H193.506V0.5H207.616C210.912 0.5 213.592 1.36384 215.595 3.15322C216.568 3.9836 217.344 5.021 217.867 6.18984C218.389 7.35867 218.644 8.62949 218.614 9.90966C218.614 13.581 216.611 16.6353 213.253 18.3012L222.003 29.7471ZM206.568 12.748C208.263 12.748 209.372 11.8224 209.372 10.3724C209.372 8.92242 208.263 8.02773 206.568 8.02773H202.501V12.748H206.568Z"
        fill="white"
      />
      <path
        d="M223.503 0.5H232.437V17.6345C232.437 20.7415 234.334 22.1258 236.782 22.1258C239.23 22.1258 241.096 20.7415 241.096 17.6345V0.5H250V17.573C250 21.6336 248.776 24.7714 246.237 26.9555C243.697 29.1396 240.607 30.247 236.782 30.247C232.957 30.247 229.806 29.1704 227.266 26.9555C224.727 24.7406 223.503 21.6336 223.503 17.573V0.5Z"
        fill="white"
      />
      <path
        d="M123.688 11.5837C124.198 12.0699 124.602 12.6564 124.872 13.3061C125.143 13.9559 125.276 14.6546 125.261 15.3581C125.261 16.7795 124.698 18.1434 123.695 19.1529C122.692 20.1623 121.329 20.7356 119.904 20.7479C118.455 20.7479 117.194 20.2198 116.088 19.1636C115.58 18.6687 115.179 18.0762 114.909 17.422C114.639 16.7678 114.504 16.0656 114.515 15.3581C114.5 14.6546 114.633 13.9559 114.904 13.3061C115.174 12.6564 115.578 12.0699 116.088 11.5837C116.582 11.0743 117.175 10.6711 117.832 10.3986C118.488 10.1262 119.193 9.99034 119.904 9.99939C120.609 9.99276 121.309 10.1299 121.96 10.4023C122.611 10.6747 123.199 11.0767 123.688 11.5837Z"
        fill="#00DDB5"
      />
      <path
        d="M61.6386 30.2299C57.7112 29.7726 54.5239 28.0957 52.0013 25.2144C49.4787 22.3332 48.2703 18.9947 48.2703 15.1988C48.2703 10.9913 49.7204 7.43933 52.6659 4.46665C55.6115 1.49396 59.3274 0 63.7835 0C68.2396 0 71.9405 1.50921 74.8709 4.46665C77.8014 7.42408 79.2666 10.9913 79.2666 15.1988C79.2915 18.0442 78.5099 20.8375 77.0138 23.2495C75.5177 25.6615 73.3696 27.5915 70.8227 28.8122C71.6535 29.8488 72.8015 30.3519 74.3422 30.3519C75.54 30.3627 76.7205 30.0635 77.7711 29.4829V36.785C76.2267 37.4375 74.5663 37.7643 72.8921 37.7454C69.0402 37.7454 65.8983 36.0686 63.4512 32.7757L61.6386 30.2299ZM63.7835 22.2113C65.6566 22.2113 67.1822 21.5405 68.3756 20.26C69.5689 18.9794 70.2033 17.2416 70.2033 15.1988C70.2033 13.156 69.584 11.4791 68.3756 10.1986C67.1671 8.91805 65.6566 8.18631 63.7835 8.18631C61.9105 8.18631 60.3999 8.85707 59.1915 10.1986C57.983 11.5401 57.3788 13.156 57.3788 15.1988C57.3788 17.2416 57.9982 18.9185 59.1915 20.26C60.3848 21.6015 61.9256 22.2113 63.7835 22.2113Z"
        fill="white"
      />
      <path
        d="M80.017 29.7471L91.9775 0.5H100.508L112.514 29.7471H102.921L100.842 24.3012H91.3552L89.2454 29.7471H80.017ZM93.9355 17.6114H98.2158L96.0908 10.7092L93.9355 17.6114Z"
        fill="white"
      />
      <rect
        fill="#00DDB5"
        height="5.16556"
        width="20.6623"
        x="17.7019"
        y="24.8344"
      />
      <path
        d="M18.2384 9.53246V15.898L0 22.5139V16.4344L10.8358 12.7152L0 8.99603V2.91656L18.2384 9.53246Z"
        fill="#00DDB5"
      />
    </svg>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ixx00l-MuiPaper-root"
    >
      <form>
        <div
          class="MuiStack-root css-1dofk9q-MuiStack-root"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r0:"
                id=":r0:-label"
              >
                FirstName
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-13lveny-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r0:"
                  placeholder="Введите ваше имя"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      FirstName
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r1:"
                id=":r1:-label"
              >
                LastName
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-13lveny-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r1:"
                  placeholder="Введите фамилию"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      LastName
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r2:"
                id=":r2:-label"
              >
                E-mail
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-13lveny-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r2:"
                  placeholder="Enter E-mail"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      E-mail
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiAutocomplete-root css-dd9lfv-MuiAutocomplete-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for=":r3:"
                  id=":r3:-label"
                >
                  Phone
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiAutocomplete-inputRoot css-13lveny-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-invalid="false"
                    autocapitalize="none"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                    id=":r3:"
                    placeholder="(555) 555-5555"
                    role="combobox"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-yjsfm1"
                    >
                      <span>
                        Phone
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r5:"
                id=":r5:-label"
              >
                Password
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-13lveny-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r5:"
                  placeholder="Enter password"
                  type="password"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Password
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r6:"
                id=":r6:-label"
              >
                Confirm password
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1wwfoqv-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r6:"
                  name="password"
                  placeholder="Enter password"
                  type="password"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Confirm password
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1wcjc1k"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <svg
                  id="Layer_1"
                  style="enable-background: new 0 0 512 512;"
                  viewBox="0 0 512 512"
                  x="0px"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                  y="0px"
                >
                  <circle
                    cx="256"
                    cy="256"
                    r="256"
                    style="fill: #F0F0F0;"
                  />
                  <g>
                    <path
                      d="M52.92,100.142c-20.109,26.163-35.272,56.318-44.101,89.077h133.178L52.92,100.142z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M503.181,189.219c-8.829-32.758-23.993-62.913-44.101-89.076l-89.075,89.076H503.181z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M8.819,322.784c8.83,32.758,23.993,62.913,44.101,89.075l89.074-89.075L8.819,322.784L8.819,322.784 z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M411.858,52.921c-26.163-20.109-56.317-35.272-89.076-44.102v133.177L411.858,52.921z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M100.142,459.079c26.163,20.109,56.318,35.272,89.076,44.102V370.005L100.142,459.079z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M189.217,8.819c-32.758,8.83-62.913,23.993-89.075,44.101l89.075,89.075V8.819z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M322.783,503.181c32.758-8.83,62.913-23.993,89.075-44.101l-89.075-89.075V503.181z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M370.005,322.784l89.075,89.076c20.108-26.162,35.272-56.318,44.101-89.076H370.005z"
                      style="fill: #0052B4;"
                    />
                  </g>
                  <g>
                    <path
                      d="M509.833,222.609h-220.44h-0.001V2.167C278.461,0.744,267.317,0,256,0 c-11.319,0-22.461,0.744-33.391,2.167v220.44v0.001H2.167C0.744,233.539,0,244.683,0,256c0,11.319,0.744,22.461,2.167,33.391 h220.44h0.001v220.442C233.539,511.256,244.681,512,256,512c11.317,0,22.461-0.743,33.391-2.167v-220.44v-0.001h220.442 C511.256,278.461,512,267.319,512,256C512,244.683,511.256,233.539,509.833,222.609z"
                      style="fill: #D80027;"
                    />
                    <path
                      d="M322.783,322.784L322.783,322.784L437.019,437.02c5.254-5.252,10.266-10.743,15.048-16.435 l-97.802-97.802h-31.482V322.784z"
                      style="fill: #D80027;"
                    />
                    <path
                      d="M189.217,322.784h-0.002L74.98,437.019c5.252,5.254,10.743,10.266,16.435,15.048l97.802-97.804 V322.784z"
                      style="fill: #D80027;"
                    />
                    <path
                      d="M189.217,189.219v-0.002L74.981,74.98c-5.254,5.252-10.266,10.743-15.048,16.435l97.803,97.803 H189.217z"
                      style="fill: #D80027;"
                    />
                    <path
                      d="M322.783,189.219L322.783,189.219L437.02,74.981c-5.252-5.254-10.743-10.266-16.435-15.047 l-97.802,97.803V189.219z"
                      style="fill: #D80027;"
                    />
                  </g>
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                </svg>
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <svg
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  image-rendering="optimizeQuality"
                  shape-rendering="geometricPrecision"
                  text-rendering="geometricPrecision"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill-rule="nonzero"
                  >
                    <path
                      d="M256 0c70.684 0 134.689 28.664 181.012 74.987C483.336 121.311 512 185.316 512 256c0 70.684-28.664 134.689-74.988 181.013C390.689 483.336 326.684 512 256 512c-70.677 0-134.689-28.664-181.013-74.987C28.664 390.689 0 326.676 0 256c0-70.684 28.664-134.689 74.987-181.013C121.311 28.664 185.316 0 256 0z"
                      fill="#4D4D4D"
                    />
                    <path
                      d="M256.001 19.597c65.278 0 124.382 26.466 167.162 69.242 42.776 42.78 69.242 101.884 69.242 167.162S465.939 380.384 423.16 423.16c-42.777 42.78-101.881 69.246-167.159 69.246-65.278 0-124.382-26.466-167.162-69.243-42.777-42.779-69.243-101.884-69.243-167.162S46.062 131.619 88.839 88.839c42.78-42.776 101.884-69.242 167.162-69.242z"
                      fill="#fff"
                    />
                    <path
                      d="M472.405 256.232H39.597l-.003-.231c0-119.52 96.886-216.407 216.407-216.407 119.517 0 216.407 96.887 216.407 216.407l-.003.231z"
                      fill="#fff"
                    />
                    <path
                      d="M39.597 256.232h432.808c-.124 119.411-96.963 216.176-216.404 216.176-119.444 0-216.28-96.765-216.404-216.176z"
                      fill="#D52B1E"
                    />
                    <path
                      d="M52.038 183.55h407.926c8.048 22.652 12.444 47.036 12.444 72.451 0 25.586-4.452 50.131-12.606 72.915H52.2c-8.154-22.784-12.606-47.329-12.606-72.915 0-25.415 4.396-49.799 12.444-72.451z"
                      fill="#0039A6"
                    />
                  </g>
                </svg>
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiLoadingButton-loading MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiLoadingButton-root MuiLoadingButton-loading MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1xce3jn-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
            disabled=""
            id=":r7:"
            tabindex="-1"
            type="button"
          >
            <div
              class="MuiLoadingButton-loadingIndicator MuiLoadingButton-loadingIndicatorCenter css-1yt7yx7-MuiLoadingButton-loadingIndicator"
            >
              <span
                aria-labelledby=":r7:"
                class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorInherit css-62e83j-MuiCircularProgress-root"
                role="progressbar"
                style="width: 16px; height: 16px;"
              >
                <svg
                  class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                  viewBox="22 22 44 44"
                >
                  <circle
                    class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                    cx="44"
                    cy="44"
                    fill="none"
                    r="20.2"
                    stroke-width="3.6"
                  />
                </svg>
              </span>
            </div>
            Registration
          </button>
        </div>
      </form>
      <div
        class="MuiBox-root css-1iatin6"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-g8p3bc-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Login
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignUp > the component is not Loading 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-ozvug0-MuiStack-root"
  >
    <svg
      class="css-13bjqh2"
      fill="none"
      height="38"
      viewBox="0 0 250 38"
      width="250"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M135.904 26.0125C132.789 23.1909 131.262 19.5717 131.262 15.1245C131.262 10.6773 132.85 7.02749 135.935 4.23647C139.02 1.44545 142.991 0.00393883 147.755 0.00393883C148.932 -0.0208734 150.109 0.0715888 151.268 0.279972C152.074 0.434727 152.87 0.639592 153.65 0.893382L155.941 1.8135V10.0025C148.152 5.98468 140.15 8.65302 140.425 15.2472C140.425 17.5475 141.066 19.2957 142.441 20.5839C143.765 21.8458 145.533 22.5295 147.358 22.4854C148.855 22.4854 150.016 22.1787 150.81 21.6573V12.7015H159.759V25.7978C158.629 27.0247 156.918 28.0981 154.658 28.9569C152.327 29.8426 149.851 30.2796 147.358 30.2451C142.817 30.2451 139 28.8342 135.904 26.0125Z"
        fill="white"
      />
      <path
        d="M163.009 0.5H171.943V17.6345C171.943 20.7415 173.84 22.1258 176.288 22.1258C178.736 22.1258 180.602 20.7415 180.602 17.6345V0.5H189.506V17.573C189.506 21.6336 188.282 24.7714 185.743 26.9555C183.203 29.1396 180.113 30.247 176.288 30.247C172.463 30.247 169.312 29.1704 166.803 26.9555C164.294 24.7406 163.009 21.6336 163.009 17.573V0.5Z"
        fill="white"
      />
      <path
        d="M222.003 29.7471H211.497L203.734 19.3193H202.501V29.7471H193.506V0.5H207.616C210.912 0.5 213.592 1.36384 215.595 3.15322C216.568 3.9836 217.344 5.021 217.867 6.18984C218.389 7.35867 218.644 8.62949 218.614 9.90966C218.614 13.581 216.611 16.6353 213.253 18.3012L222.003 29.7471ZM206.568 12.748C208.263 12.748 209.372 11.8224 209.372 10.3724C209.372 8.92242 208.263 8.02773 206.568 8.02773H202.501V12.748H206.568Z"
        fill="white"
      />
      <path
        d="M223.503 0.5H232.437V17.6345C232.437 20.7415 234.334 22.1258 236.782 22.1258C239.23 22.1258 241.096 20.7415 241.096 17.6345V0.5H250V17.573C250 21.6336 248.776 24.7714 246.237 26.9555C243.697 29.1396 240.607 30.247 236.782 30.247C232.957 30.247 229.806 29.1704 227.266 26.9555C224.727 24.7406 223.503 21.6336 223.503 17.573V0.5Z"
        fill="white"
      />
      <path
        d="M123.688 11.5837C124.198 12.0699 124.602 12.6564 124.872 13.3061C125.143 13.9559 125.276 14.6546 125.261 15.3581C125.261 16.7795 124.698 18.1434 123.695 19.1529C122.692 20.1623 121.329 20.7356 119.904 20.7479C118.455 20.7479 117.194 20.2198 116.088 19.1636C115.58 18.6687 115.179 18.0762 114.909 17.422C114.639 16.7678 114.504 16.0656 114.515 15.3581C114.5 14.6546 114.633 13.9559 114.904 13.3061C115.174 12.6564 115.578 12.0699 116.088 11.5837C116.582 11.0743 117.175 10.6711 117.832 10.3986C118.488 10.1262 119.193 9.99034 119.904 9.99939C120.609 9.99276 121.309 10.1299 121.96 10.4023C122.611 10.6747 123.199 11.0767 123.688 11.5837Z"
        fill="#00DDB5"
      />
      <path
        d="M61.6386 30.2299C57.7112 29.7726 54.5239 28.0957 52.0013 25.2144C49.4787 22.3332 48.2703 18.9947 48.2703 15.1988C48.2703 10.9913 49.7204 7.43933 52.6659 4.46665C55.6115 1.49396 59.3274 0 63.7835 0C68.2396 0 71.9405 1.50921 74.8709 4.46665C77.8014 7.42408 79.2666 10.9913 79.2666 15.1988C79.2915 18.0442 78.5099 20.8375 77.0138 23.2495C75.5177 25.6615 73.3696 27.5915 70.8227 28.8122C71.6535 29.8488 72.8015 30.3519 74.3422 30.3519C75.54 30.3627 76.7205 30.0635 77.7711 29.4829V36.785C76.2267 37.4375 74.5663 37.7643 72.8921 37.7454C69.0402 37.7454 65.8983 36.0686 63.4512 32.7757L61.6386 30.2299ZM63.7835 22.2113C65.6566 22.2113 67.1822 21.5405 68.3756 20.26C69.5689 18.9794 70.2033 17.2416 70.2033 15.1988C70.2033 13.156 69.584 11.4791 68.3756 10.1986C67.1671 8.91805 65.6566 8.18631 63.7835 8.18631C61.9105 8.18631 60.3999 8.85707 59.1915 10.1986C57.983 11.5401 57.3788 13.156 57.3788 15.1988C57.3788 17.2416 57.9982 18.9185 59.1915 20.26C60.3848 21.6015 61.9256 22.2113 63.7835 22.2113Z"
        fill="white"
      />
      <path
        d="M80.017 29.7471L91.9775 0.5H100.508L112.514 29.7471H102.921L100.842 24.3012H91.3552L89.2454 29.7471H80.017ZM93.9355 17.6114H98.2158L96.0908 10.7092L93.9355 17.6114Z"
        fill="white"
      />
      <rect
        fill="#00DDB5"
        height="5.16556"
        width="20.6623"
        x="17.7019"
        y="24.8344"
      />
      <path
        d="M18.2384 9.53246V15.898L0 22.5139V16.4344L10.8358 12.7152L0 8.99603V2.91656L18.2384 9.53246Z"
        fill="#00DDB5"
      />
    </svg>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ixx00l-MuiPaper-root"
    >
      <form>
        <div
          class="MuiStack-root css-1dofk9q-MuiStack-root"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r8:"
                id=":r8:-label"
              >
                FirstName
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-13lveny-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r8:"
                  placeholder="Введите ваше имя"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      FirstName
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":r9:"
                id=":r9:-label"
              >
                LastName
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-13lveny-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":r9:"
                  placeholder="Введите фамилию"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      LastName
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":ra:"
                id=":ra:-label"
              >
                E-mail
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-13lveny-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":ra:"
                  placeholder="Enter E-mail"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      E-mail
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiAutocomplete-root css-dd9lfv-MuiAutocomplete-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for=":rb:"
                  id=":rb:-label"
                >
                  Phone
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiAutocomplete-inputRoot css-13lveny-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-invalid="false"
                    autocapitalize="none"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                    id=":rb:"
                    placeholder="(555) 555-5555"
                    role="combobox"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-yjsfm1"
                    >
                      <span>
                        Phone
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":rd:"
                id=":rd:-label"
              >
                Password
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-13lveny-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":rd:"
                  placeholder="Enter password"
                  type="password"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Password
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-1uxbq4s-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for=":re:"
                id=":re:-label"
              >
                Confirm password
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1wwfoqv-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1lkr5rz-MuiInputBase-input-MuiOutlinedInput-input"
                  id=":re:"
                  name="password"
                  placeholder="Enter password"
                  type="password"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-yjsfm1"
                  >
                    <span>
                      Confirm password
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1wcjc1k"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <svg
                  id="Layer_1"
                  style="enable-background: new 0 0 512 512;"
                  viewBox="0 0 512 512"
                  x="0px"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                  y="0px"
                >
                  <circle
                    cx="256"
                    cy="256"
                    r="256"
                    style="fill: #F0F0F0;"
                  />
                  <g>
                    <path
                      d="M52.92,100.142c-20.109,26.163-35.272,56.318-44.101,89.077h133.178L52.92,100.142z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M503.181,189.219c-8.829-32.758-23.993-62.913-44.101-89.076l-89.075,89.076H503.181z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M8.819,322.784c8.83,32.758,23.993,62.913,44.101,89.075l89.074-89.075L8.819,322.784L8.819,322.784 z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M411.858,52.921c-26.163-20.109-56.317-35.272-89.076-44.102v133.177L411.858,52.921z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M100.142,459.079c26.163,20.109,56.318,35.272,89.076,44.102V370.005L100.142,459.079z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M189.217,8.819c-32.758,8.83-62.913,23.993-89.075,44.101l89.075,89.075V8.819z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M322.783,503.181c32.758-8.83,62.913-23.993,89.075-44.101l-89.075-89.075V503.181z"
                      style="fill: #0052B4;"
                    />
                    <path
                      d="M370.005,322.784l89.075,89.076c20.108-26.162,35.272-56.318,44.101-89.076H370.005z"
                      style="fill: #0052B4;"
                    />
                  </g>
                  <g>
                    <path
                      d="M509.833,222.609h-220.44h-0.001V2.167C278.461,0.744,267.317,0,256,0 c-11.319,0-22.461,0.744-33.391,2.167v220.44v0.001H2.167C0.744,233.539,0,244.683,0,256c0,11.319,0.744,22.461,2.167,33.391 h220.44h0.001v220.442C233.539,511.256,244.681,512,256,512c11.317,0,22.461-0.743,33.391-2.167v-220.44v-0.001h220.442 C511.256,278.461,512,267.319,512,256C512,244.683,511.256,233.539,509.833,222.609z"
                      style="fill: #D80027;"
                    />
                    <path
                      d="M322.783,322.784L322.783,322.784L437.019,437.02c5.254-5.252,10.266-10.743,15.048-16.435 l-97.802-97.802h-31.482V322.784z"
                      style="fill: #D80027;"
                    />
                    <path
                      d="M189.217,322.784h-0.002L74.98,437.019c5.252,5.254,10.743,10.266,16.435,15.048l97.802-97.804 V322.784z"
                      style="fill: #D80027;"
                    />
                    <path
                      d="M189.217,189.219v-0.002L74.981,74.98c-5.254,5.252-10.266,10.743-15.048,16.435l97.803,97.803 H189.217z"
                      style="fill: #D80027;"
                    />
                    <path
                      d="M322.783,189.219L322.783,189.219L437.02,74.981c-5.252-5.254-10.743-10.266-16.435-15.047 l-97.802,97.803V189.219z"
                      style="fill: #D80027;"
                    />
                  </g>
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                  <g />
                </svg>
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <svg
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  image-rendering="optimizeQuality"
                  shape-rendering="geometricPrecision"
                  text-rendering="geometricPrecision"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill-rule="nonzero"
                  >
                    <path
                      d="M256 0c70.684 0 134.689 28.664 181.012 74.987C483.336 121.311 512 185.316 512 256c0 70.684-28.664 134.689-74.988 181.013C390.689 483.336 326.684 512 256 512c-70.677 0-134.689-28.664-181.013-74.987C28.664 390.689 0 326.676 0 256c0-70.684 28.664-134.689 74.987-181.013C121.311 28.664 185.316 0 256 0z"
                      fill="#4D4D4D"
                    />
                    <path
                      d="M256.001 19.597c65.278 0 124.382 26.466 167.162 69.242 42.776 42.78 69.242 101.884 69.242 167.162S465.939 380.384 423.16 423.16c-42.777 42.78-101.881 69.246-167.159 69.246-65.278 0-124.382-26.466-167.162-69.243-42.777-42.779-69.243-101.884-69.243-167.162S46.062 131.619 88.839 88.839c42.78-42.776 101.884-69.242 167.162-69.242z"
                      fill="#fff"
                    />
                    <path
                      d="M472.405 256.232H39.597l-.003-.231c0-119.52 96.886-216.407 216.407-216.407 119.517 0 216.407 96.887 216.407 216.407l-.003.231z"
                      fill="#fff"
                    />
                    <path
                      d="M39.597 256.232h432.808c-.124 119.411-96.963 216.176-216.404 216.176-119.444 0-216.28-96.765-216.404-216.176z"
                      fill="#D52B1E"
                    />
                    <path
                      d="M52.038 183.55h407.926c8.048 22.652 12.444 47.036 12.444 72.451 0 25.586-4.452 50.131-12.606 72.915H52.2c-8.154-22.784-12.606-47.329-12.606-72.915 0-25.415 4.396-49.799 12.444-72.451z"
                      fill="#0039A6"
                    />
                  </g>
                </svg>
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiLoadingButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1xce3jn-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
            id=":rf:"
            tabindex="0"
            type="button"
          >
            Registration
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </form>
      <div
        class="MuiBox-root css-1iatin6"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-g8p3bc-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Login
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
